@@ -1,3 +1,15 @@
+2010-04-26  Pavel Feldman  <pfeldman@chromium.org>
+
+        Reviewed by Yury Semikhatsky.
+
+        Web Inspector: Render clip in summary bar using "arc", not "quadraticCurveTo".
+
+        https://bugs.webkit.org/show_bug.cgi?id=38107
+
+        * inspector/front-end/SummaryBar.js:
+        (WebInspector.SummaryBar.prototype._drawSummaryGraph.drawPill):
+        (WebInspector.SummaryBar.prototype._drawSummaryGraph):
+
 2010-04-26  Andreas Kling  <andreas.kling@nokia.com>
 
         Reviewed by Tor Arne Vestbø.
